<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/backgroud_login"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.7"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="37dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.01"
            android:orientation="vertical" >

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="0.2"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/linearLayout6"
                android:layout_width="fill_parent"
                android:layout_height="50dip"
                android:layout_weight="0.35"
                android:orientation="vertical" >

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout7"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_weight="0.5"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/TextView01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                   	android:textSize="14sp"
                   	android:layout_marginLeft="10dp"
                   	android:layout_marginRight="5dp"
                    android:text="@string/nombre_usuario"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#AF213B"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/nombreUsuario"
                    android:layout_width="fill_parent"
                    android:layout_height="30dp"
                    android:layout_marginLeft="10dp" 
                    android:layout_marginRight="5dp"                  
                    android:background="#f2f2f2"
                    android:lines="1"
                    android:textColor="#000000" 
                    android:textCursorDrawable="@null" 
                    android:maxLines="1"
                    android:singleLine="true"/>

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="5dp"
                  	android:textSize="14sp"
                    android:text="@string/contrasena"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#AF213B"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/contrasena"
                    android:layout_width="fill_parent"
                    android:layout_height="30dp"
                  	android:layout_marginLeft="10dp"
                  	android:layout_marginRight="5dp"
                    android:background="#f2f2f2"
                    android:inputType="textPassword" 
                    android:textColor="#000000" 
                    android:textCursorDrawable="@null" 
                    android:lines="1"/>

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="" />

                <LinearLayout
                    android:id="@+id/linearLayout8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"   
                    android:layout_marginLeft="15dp" 
                    android:layout_marginRight="5dp"              
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/olvidoContra"
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@null"
                        android:text="@string/olvido_contra"
                        android:textColor="#CA5C05"
                        android:textSize="10sp"
                        android:textStyle="bold" />
                    
                    <LinearLayout
            			android:id="@+id/linearLayout15"
            			android:layout_width="30dp"
           				android:layout_height="10dp"
           			    android:orientation="vertical" >
			        </LinearLayout>

                    <CheckBox
                        android:id="@+id/checkBox1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/recordar_contra"
                        android:textColor="#CA5C05"
                        android:textSize="10sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" >

                        <ImageButton
                            android:id="@+id/botIniciarSesion"
                            android:layout_width="100dp"
                            android:layout_height="25dp"
                            android:layout_gravity="center|bottom"
                            android:background="@drawable/btn_iniciar_sesion" />

                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="0.08"
            android:orientation="vertical" >
        </LinearLayout>
	</LinearLayout>


    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.3"
        android:gravity="center"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" 
            android:layout_weight="0.35">
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout11"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.28"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btn_ayuda"
                android:layout_width="233dp"
                android:layout_height="5dp"
                android:layout_weight="0.34"
                android:alpha="0.1" />

            <LinearLayout
                android:id="@+id/linearLayout13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:orientation="vertical" >
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout10"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.16"
            android:orientation="vertical" >
        </LinearLayout>

    </LinearLayout>

</LinearLayout>